@@ -1,6 +1,7 @@
 <html>
 <head>
 <title>Maps index</title>
+<link rel="stylesheet" type="text/css" href="/ailesse.css" />
 </head>
 <body>
 #MAPCOUNT# maps found:
