@@ -1,5 +1,6 @@
 <html>
 <head>
+<link rel="stylesheet" type="text/css" href="/ailesse.css" />
 <title>Region list</title>
 </head>
 <body>
